--- a/paper/sections/challenges.tex
+++ b/paper/sections/challenges.tex
@@ -1,6 +1,6 @@
 % !TEX root = ../main.tex
 
-\section{Research Challenges}
+\section{Limitations and Challenges for Blockchain Technology}
 \label{sec:challenges}
 
 % Jeremy: I reclustered this a bit. I think we discussed this during the call. Feel free to debate. 
@@ -69,7 +69,7 @@ Several Blockchains systems need to access off-chain information during normal p
 To do so, these systems rely on \emph{off-chain oracles} which are responsible for gathering external information and then recording that information within a transaction, making it available to the Blockchain system.
 While such oracles are helpful, they do impact the the auditability of the system as it may not be possible to verify the off-chain oracle's answer at a later date.
 As such, if such oracles are used they introduce a trusted third-party into a system which otherwise relies on diffused trust.
-To address this issues, it is possible for off-chain oracles to be collectively operated by the miners.
+To address this issue, it is possible for off-chain oracles to be collectively operated by the miners.
 
 Our analysis has allowed us to identify several challenge areas for the development and application of blockchain technology.  In this section we discuss several of these challenges and briefly summarize related approaches for mitigating them.
 
