Working towards updated figures.

--- a/paper/sections/discussion.tex
+++ b/paper/sections/discussion.tex
@@ -1,4 +1,5 @@
 \section{Lessons Learned and Discussion}
+%, (3) how does it compare to other approaches (e.g., distributed databases).
 
 \subsection{Relationship to other distributed systems}
 Blockchain technology fits within the broader family of distributed systems.
@@ -90,3 +91,5 @@ Due to the prominence of Bitcoin, many people are familiar with Blockchain first
 %Several sources in our dataset refer to anonymity as a key feature of Blockchain technology.
 %While it is true that Blockchain systems can allow for anonymous transactions, an analysis of our result graph shows that anonymity is only weakly connected to the rest of the group.
 %Thus, while anonymity is often discussed as one of the exciting properties related to Blockchain technology, it doesn't a
+
+\snote{Discuss side chains and layer 2 approaches.}
