--- a/paper/sections/methodology.tex
+++ b/paper/sections/methodology.tex
@@ -1,6 +1,5 @@
 % !TEX root = ../main.tex
 
-
 \section{Methodology}
 \label{sec:method}
 
@@ -111,42 +110,27 @@ In this process, no new codes were discovered, indicating that our process had p
 \subsubsection{Stage 3---Selective Coding}
 In the third stage, two researchers transfered all of the concepts onto sticky-notes.
 They then drew connecting lines between the concepts, describing how the concepts related to one another.
-Based on these interconnections, concepts were divided into five different categories:
+Based on these interconnections, concepts were divided into five different categories, each with an associated color:
 
  \renewcommand{\labelitemi}{$\blacksquare$}
 \begin{itemize}
-	\item \textbf{Primitives.} These are the primitives that are used to enable Blockchain technology. Unlike properties, they are not useful by themselves, but only when combined with other primitives to achieve specific properties. Examples include on-chain tokens, authenticated data-structures, and zero-knowledge proofs.
+	\item \textbf{Primitives (green).} These are the primitives that are used to enable Blockchain technology. Unlike properties, they are not useful by themselves, but only when combined with other primitives to achieve specific properties. Examples include on-chain tokens, authenticated data-structures, and zero-knowledge proofs.
 	
-	\item \textbf{Technological properties.} Technological properties are the core building blocks and features of Blockchain technology. Examples include decentralized governance, append-only ledgers, and data replication.
+	\item \textbf{Technological properties (blue).} Technological properties are the core building blocks and features of Blockchain technology. Examples include decentralized governance, append-only ledgers, and data replication.
 	
-	\item \textbf{Normative properties.} Normative properties differ from technological properties in that they are not technical, but rather represent properties that people hope to achieve through the use of Blockchain technology. Critically, these properties cannot be achieved through reliance on the technical properties alone, but require the system built on top of Blockchain technology be designed to accomplish these goals. Examples include censorship resistance, ease-of-entry for miners, low cost to participate.
+	\item \textbf{Normative properties (orange).} Normative properties differ from technological properties in that they are not technical, but rather represent properties that people hope to achieve through the use of Blockchain technology. Critically, these properties cannot be achieved through reliance on the technical properties alone, but require the system built on top of Blockchain technology be designed to accomplish these goals. Examples include censorship resistance, ease-of-entry for miners, low cost to participate.
 	In general, normative properties roughly correlate to the hype attached to Blockchain technology.
 
-	\item \textbf{Capabilities.} Capabilities are high-level features provided by Blockchain technology. Examples include on-chain asset provenance, anonymity, and resilience.
+	\item \textbf{Capabilities (yellow).} Capabilities are high-level features provided by Blockchain technology. Examples include on-chain asset provenance, anonymity, and resilience.
 	
-	\item \textbf{Use cases.} Use cases are the areas where the properties and capabilities of Blockchain technology would be useful in building systems. Examples include cryptocurrencies, supply chain management, and identity management.
+	\item \textbf{Use cases (gray).} Use cases are the areas where the properties and capabilities of Blockchain technology would be useful in building systems. Examples include cryptocurrencies, supply chain management, and identity management.
 \end{itemize}
  \renewcommand{\labelitemi}{\textbullet}
 
-While we divide the concepts into five categories, we find that the concepts are highly connected, indicating that often more than one concept is combined to create a use case.
-
-
-Images of these category graphs can be found in Figures~\ref{fig:grounded-theory-main}~and~\ref{fig:grounded-theory-apps} .  The groupings are of interest, as they show how different industries are using a range of techniques to achieve similar goals.  The positioning of each box is not meaningful.
-
-\rnote{we need to specify what the arrow head direction means. I think they may not be done consistently. Also we need to change "Application" to "Use Case" on all figures.}
-\rnote{Fig 1 needs the follow changes: 1. Sidechains have a box type that doesn't match others.  We should remove it or define what the box means in the legend--not off to the side.  2. It would be good to increase the font size in the diagram, and perhaps increase the shape sizes a little too.}
-
-\begin{figure*}
-	\includegraphics[width=\textwidth]{figures/grounded-theory-main}
-	\caption{Category Map for Blockchain Technology.}
-	\label{fig:grounded-theory-main}
-\end{figure*}
-
-\begin{figure*}
-	\includegraphics[width=\textwidth]{figures/grounded-theory-apps}
-	\caption{Use Case Map for Blockchain Technology.}
-	\label{fig:grounded-theory-apps}
-\end{figure*}
+Figures for each of these categories are given throughout the paper and in the appendix (see Figures~??).
+Within these figures, arrows between concepts indicate that the source concept is used to support the destination concept.
+In some cases, one concepts supports several properties, and for convenience this is represented as that concept surrounding the concepts it supports.
+While we divide the concepts into these five categories, individual concepts are highly interconnected. This provides credence to the notion that Blockchain technology overall is a cohesive, with each of the component concepts serving a purpose in the overall technology.
 
 At this stage of the research, we allowed researcher expertise to begin influencing the results.
 First, by its very nature drawing connections between concepts is subjective.
