--- a/paper/setup/macros.tex
+++ b/paper/setup/macros.tex
@@ -67,3 +67,5 @@
 \newcommand{\anote}[1]{\todo[inline]{Arkady:  #1}}
 \newcommand{\bnote}[1]{\todo[inline]{Ben:  #1}}
 \newcommand{\rnote}[1]{\todo[inline]{Rob: #1}}
+\newcommand{\snote}[1]{\todo[inline]{Scott: #1}}
+\newcommand{\jnote}[1]{\todo[inline]{Jeremy: #1}}
